# sciproxy

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: image.yml  image_version.yml
sciproxy/: __init__.py  __main__.py  cache.py  client.py  proxy.py  utils.py
sciproxy/downloaders/: abc.py  capes.py  ieee.py  scihub.py
sciproxy/static/: dark-mode.js  index.html  not_found.html  styles.css
tests/: test_cache.py  test_utils.py
