[tool.poetry]
name = "sciproxy"
version = "0.1.1"
description = ""
authors = ["tiagovla <tiagovla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiohttp = "^3.11.12"
aiofiles = "^24.1.0"
pikepdf = "^9.5.2"

[tool.poetry.scripts]
sciproxy = "sciproxy.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
